--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+header{
+  width: 100%;
+  height: 80px;
+  background-color: #030303;
+  color: white;
+}
+
+header img{
+  height: 60px;
+  margin-right: 20px;
+}
+ul li{
+list-style: none;
+margin-left: 20px;
+}
+
 #card{
   height: 200px;
   padding: 10px;
